// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TMDB fetches movie id by imdb id 1`] = `140607`;

exports[`TMDB fetches movie id by title 1`] = `140607`;

exports[`TMDB fetches movie info from tmdb for a given id 1`] = `
Object {
  "backdropUrl": "string",
  "budget": "number",
  "credits": Object {
    "cast": Array [
      Object {
        "character": "string",
        "name": "string",
        "photoUrl": "string",
      },
    ],
    "crew": Object {
      "cinematographers": Array [
        Object {
          "department": "string",
          "job": "string",
          "name": "string",
          "photoUrl": "null",
        },
      ],
      "composers": Array [
        Object {
          "department": "string",
          "job": "string",
          "name": "string",
          "photoUrl": "string",
        },
      ],
      "directors": Array [
        Object {
          "department": "string",
          "job": "string",
          "name": "string",
          "photoUrl": "string",
        },
      ],
      "producers": Array [
        Object {
          "department": "string",
          "job": "string",
          "name": "string",
          "photoUrl": "string",
        },
      ],
      "writers": Array [
        Object {
          "department": "string",
          "job": "string",
          "name": "string",
          "photoUrl": "string",
        },
      ],
    },
  },
  "genres": "Array<string>",
  "homepage": "string",
  "imdbId": "string",
  "keywords": "Array<string>",
  "originalLanguage": "string",
  "originalTitle": "string",
  "posterUrl": "string",
  "productionCompanies": "Array<string>",
  "productionCountries": Array [
    Object {
      "iso_3166_1": "string",
      "name": "string",
    },
  ],
  "releaseDate": "string",
  "revenue": "number",
  "runtime": "number",
  "synopsis": "string",
  "tagline": "string",
  "title": "string",
  "tmdbId": "number",
  "tmdbPopularity": "number",
  "tmdbRating": "number",
  "tmdbRatingVoteCount": "number",
  "videos": Array [
    Object {
      "iso_3166_1": "string",
      "iso_639_1": "string",
      "key": "string",
      "name": "string",
      "site": "string",
      "size": "number",
      "type": "string",
    },
  ],
}
`;

exports[`TMDB fetches tv show id by imdb id 1`] = `1399`;

exports[`TMDB fetches tv show id by title 1`] = `1399`;

exports[`TMDB fetches tv show info from tmdb for a given id 1`] = `
Object {
  "backdropUrl": "string",
  "createdBy": Array [
    Object {
      "name": "string",
      "photoUrl": "string",
    },
  ],
  "credits": Object {
    "cast": Array [
      Object {
        "character": "string",
        "name": "string",
        "photoUrl": "string",
      },
    ],
    "crew": Array [
      Object {
        "department": "string",
        "job": "string",
        "name": "string",
        "photoUrl": "string",
      },
    ],
  },
  "episodeRuntime": "Array<number>",
  "firstAirDate": "string",
  "genres": "Array<string>",
  "homepage": "string",
  "inProduction": "boolean",
  "keywords": "Array<string>",
  "languages": "Array<string>",
  "lastAirDate": "string",
  "name": "string",
  "networks": "Array<string>",
  "numberOfEpisodes": "number",
  "numberOfSeasons": "number",
  "originCountry": "Array<string>",
  "originalLanguage": "string",
  "originalName": "string",
  "posterUrl": "string",
  "productionCompanies": "Array<string>",
  "seasons": Array [
    Object {
      "airDate": "string",
      "episodeCount": "number",
      "posterUrl": "string",
      "seasonNumber": "number",
    },
  ],
  "status": "string",
  "synopsis": "string",
  "tmdbId": "number",
  "tmdbPopularity": "number",
  "tmdbRating": "number",
  "tmdbRatingVoteCount": "number",
  "type": "string",
  "videos": Array [],
}
`;
